# apo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  com.apo.watch.plist.template  config.env.example  justfile  launchd-watch.sh  watch.sh
.cursor/skills/readme-craft/: SKILL.md  reference.md
.cursor/skills/readme-craft/fixtures/bad/: README.md
.cursor/skills/readme-craft/fixtures/good/: README.md  quickstart.md
.cursor/skills/readme-craft/scripts/: lint_readme.py  test_lint_readme.py
docs/: index-concurrency.md  local-rpc.md  multi-vault.md  onboard-prompt.md  patch-note-ops.md  quickstart.md
docs/assets/: apo-icon-prompt.md
docs/contracts/: README.md  llm-wiki.md  okf-bundle.md  para.md
docs/profiles/: README.md  llm-wiki.md  okf-bundle.md  para.md
engine/: .gitignore  .indexignore  pyproject.toml
engine/mcp/: server.py
engine/src/apo_engine/: __init__.py  agent_args.py  agent_validation.py  cli.py  config.py  core.py  deferred.py  markdown_patch.py  mcp_backend.py  mcp_server.py  okf.py  ops.py  patch_ops.py  rpc.py  validation_hints.py  vaults.py  watch.py
engine/src/apo_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
engine/tests/: test_agent_args.py  test_core.py  test_deferred.py  test_markdown_patch.py  test_mcp_lean.py  test_mcp_validation_hints.py  test_multi_vault.py  test_okf.py  test_patch_note_schema.py  test_rpc.py  test_validation_hints.py  test_watch_debounce.py
gateway/: .env.example  .gitignore  composer.json
gateway/app/Mcp/Servers/: ApoServer.php
gateway/app/Mcp/Tools/: SearchNotesTool.php
gateway/bootstrap/: app.php
gateway/config/: services.php
gateway/routes/: ai.php
